[gd_scene load_steps=12 format=2]

[ext_resource path="res://niveles/Nivel.gd" type="Script" id=1]
[ext_resource path="res://assets/environment/layers/back.png" type="Texture" id=2]
[ext_resource path="res://assets/environment/layers/middle.png" type="Texture" id=3]
[ext_resource path="res://assets/tilesets/AutoTile.tres" type="TileSet" id=4]
[ext_resource path="res://assets/tilesets/tiles_items.tres" type="TileSet" id=5]
[ext_resource path="res://assets/tilesets/tiles_spikes.tres" type="TileSet" id=6]
[ext_resource path="res://ui/HUD.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/audio/pickup2.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/audio/Grasslands Theme.ogg" type="AudioStream" id=9]
[ext_resource path="res://items/Door.tscn" type="PackedScene" id=10]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=11]

[node name="Nivel" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
editor/display_folded = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
editor/display_folded = true
motion_scale = Vector2( 0.2, 1 )
motion_mirroring = Vector2( 576, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
editor/display_folded = true
position = Vector2( -6.57986, 164.798 )
motion_scale = Vector2( 0.6, 1 )
motion_mirroring = Vector2( 880, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 880, 368 )

[node name="World" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Objects" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Pickups" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Danger" type="TileMap" parent="."]
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 16 )
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerSpawn" type="Position2D" parent="."]
position = Vector2( 305.173, 217.183 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
editor/display_folded = true

[node name="HUD" parent="CanvasLayer" instance=ExtResource( 7 )]
margin_bottom = 97.0

[node name="PickupSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -15.0

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -5.0
autoplay = true

[node name="Door" parent="." instance=ExtResource( 10 )]
position = Vector2( 125.811, 48.0453 )

[node name="Player" parent="." instance=ExtResource( 11 )]
[connection signal="body_entered" from="Door" to="." method="_on_Door_body_entered"]
